# SampleOpenCV

Image_Converter/: Image_Process.cs  Program.cs
Image_Publisher/: CMakeLists.txt  Image_Publisher.cpp  Image_Publisher.h  Makefile  machineid
